Comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
 <body>
     <main>
         <header>
-            <article>
-                <h2> Artigo 001</h2>
-                <p> Texto Artigo 001</p>
+            <h1> Cursos Grátis</h1>
+            <article>  
+                <h2>Curso de HTML5 com CSS3</h2>
+                <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Dolorem earum eligendi doloribus dolore eos quidem eveniet, ab officiis 
+                    facilis modi aspernatur distinctio? 
+                    Incidunt totam recusandae autem nemo quibusdam eos iste.</p>
             </article>
             <article>
-                <h2> Artigo 002</h2>
-                <p> Texto Artigo 002</p>
+                <h2> Curso de JavaScript</h2>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                     Corrupti aliquid blanditiis est cumque. Eius iste cumque, 
+                     nulla dolorum dolore numquam laborum eos voluptates voluptatibus soluta illum,
+                      totam provident optio quas?</p>
             </article>
         </header>
     </main>
